tests/sksl/errors/OpaqueTypeConstruction.dsl.glsl
### Compilation failed:

error: cannot construct 'sampler'

1 error
